@@ -77,6 +77,9 @@ Integrated from 1.1.x
 
 1.1.6
 
+ - fixed graphs in Oracle system (Eugene)
+ - fixed trigger expressions with ':' (Eugene)
+ - fixed 'Server info' screen componets (Eugene)
  - fixed 'service_state[*]' for WinXX (Eugene)
  - fixed SQLs for PostgreSQL (Eugene)
  - fix for adding trigger expressions having sign '-' (Alexei)
